Fix Layout issues

--- a/src/main/renderer/manage-categories/styles.less
+++ b/src/main/renderer/manage-categories/styles.less
@@ -11,8 +11,5 @@
         visibility: visible;
       }
     }
-    &.editable {
-
-    }
   }
 }
